Show preview in URL check dialog.

--- a/extension/chrome/content/pd-check.xhtml
+++ b/extension/chrome/content/pd-check.xhtml
@@ -82,6 +82,13 @@
 				<p>The following issues have been detected:</p>
 				<ul id="pd-check-results-list"></ul>
 			</div>
+			<div id="pd-check-preview" class="hidden">
+				<hr/>
+				<span id="pd-check-preview-button" onclick="pdCheckPreview()">Show preview</span>
+				<div id="pd-check-preview-canvas" class="hidden">
+					<img id="pd-check-preview-image" src="" width="99%"/>
+				</div>
+			</div>
 			<div id="pd-check-error" class="hidden">
 				<table>
 					<tr>
